[package]
name = "libcodejam"
version = "0.1.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"

description = "A framework for buulding Google Code Jam solvers"
repository = "https://github.com/Lucretiel/libcodejam"
license = "GPLv3"

[dependencies]
derive_more = "0.11.0"
crossbeam = "0.4.1"
